Prevent double border for resizable combo list with bottom toolbar.

--- a/css/auto/Ext.form.ComboBox.css
+++ b/css/auto/Ext.form.ComboBox.css
@@ -1,17 +1,20 @@
 /* 
     Document   : Ext.Toolbar
     Created on : 4 sept. 2012, 17:39:24
-    Author     : eric
-    Description:
-        Purpose of the stylesheet follows.
+    Author     : Éric Ortega <eric@planysphere.fr>
 */
 
-/* 
-   TODO customize this sample style
-   Syntax recommendation http://www.w3.org/TR/REC-CSS2/
-*/
-
+/**
+ * Prevent double bottom border for top toolbar.
+ */
 .x-combo-list-hd-toolbar .x-toolbar {
 	border-top: 0 none;
 	border-bottom: 1px solid #98C0F4;
+}
+
+/**
+ * Prevent double top border for resizable list with toolbar.
+ */
+.x-combo-list.x-resizable-pinned .x-combo-list-ft .x-toolbar {
+	border-top: 0;
 }
